--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,16 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="history">History</string>
     <string name="delete">Delete</string>
+    <string name="scissors">scissors</string>
+    <string name="paper">paper</string>
+    <string name="rock">rock</string>
+    <string name="welcome">Welcome</string>
+    <string name="instructions">Instructions: select rock, paper, or scissors to play.</string>
+    <string name="all_time">Your all time statistics</string>
+    <string name="statistics">Win: %d, Draw %d, Lose: %d</string>
+    <string name="you">You</string>
+    <string name="computer">Computer</string>
+    <string name="v_s">V.S.</string>
+    <string name="your_choice">your choice</string>
+    <string name="computer_its_choice">computer its choice</string>
 </resources>
